# dj-L10n_dateinput_bug

./: .gitignore  README.md  README.wikidoc  manage.py  pyproject.toml
book_store/: admin.py  forms.py  models.py  views.py
book_store/migrations/: 0001_initial.py  0002_alter_book_borrowed_from_date.py  0003_alter_book_borrowed_from_date.py  0004_alter_book_borrowed_from_date.py
l10n_dateinput_bug/: asgi.py  settings.py  urls.py  wsgi.py
locale/da_DK/LC_MESSAGES/: django.po
locale/en_US/LC_MESSAGES/: django.po
templates/: base.html  bug_display.html  create_book.html
